--- a/views/index.pug
+++ b/views/index.pug
@@ -81,7 +81,7 @@ html
                   img(src=`images/f-spore.png`)
                 |               
                 h4 Martin Pelayo
-                |  _martinezP
+                |  #{myhandle}
               |                            
               p #{tuweet1}
               |
@@ -127,7 +127,7 @@ html
                   img(src='images/f-spore.png')
                 |               
                 h4 Martin Pelayo
-                |  _martinezP
+                |  #{myhandle}
               |             
               p #{tuweet2}
               ul.app--tweet--actions.circle--list--inline
@@ -172,7 +172,7 @@ html
                   img(src='images/f-spore.png')
                 |               
                 h4 Martin Pelayo
-                |  _martinezP
+                |  #{myhandle}
               |             
               p #{tuweet3}
               ul.app--tweet--actions.circle--list--inline
@@ -218,7 +218,7 @@ html
                   img(src='images/f-spore.png')
                 |               
                 h4 Martin Pelayo
-                |  _martinezP
+                |  #{myhandle}
               |             
               p #{tuweet4}
               ul.app--tweet--actions.circle--list--inline
@@ -263,7 +263,7 @@ html
                   img(src='images/f-spore.png')
                 |               
                 h4 Martin Pelayo
-                |  _martinezP
+                |  #{myhandle}
               |             
               p #{tuweet5}                                         
               ul.app--tweet--actions.circle--list--inline
@@ -380,7 +380,7 @@ html
             li
               h3
                 | Conversation with 
-                a Martin Pelayo
+                a #{name}
               |             
               ul.app--message--conversation
                 li.app--message
