deleted now unneeded changes in CSS

--- a/public/global.css
+++ b/public/global.css
@@ -2285,10 +2285,9 @@ a:hover .app--avatar {
 
 
 /* line 131, ../sass/global.sass */
-.app--tweet--list, .app--user--list { /*HAD TO ADD SOME SPACE ABOVE LIST SO THAT AL LI'S WOULD BE VISIBLE, WIERD ISSUE*/
+.app--tweet--list, .app--user--list { 
   list-style: none;
   padding-bottom: 195px;
-  /*margin-top: 7em; commented out because the problem seemed to go away for some reason*/ 
 }
 
 
@@ -2425,11 +2424,10 @@ a:hover .app--avatar {
 
 
 /* line 216, ../sass/global.sass */
-.app--message--list > li {   /*THIS ALSO NEEDED SPACE...*/
+.app--message--list > li {   
   padding: 15px 20px;
   margin: 0;
   border-bottom: 4px solid #f1f1f1;
-  /*margin-top: 7em;  commented out because the problem seemed to go away for some reason */
 }
 
 
